added view results and settings windows, added settings

--- a/ShellMeter/App.config
+++ b/ShellMeter/App.config
@@ -1,6 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ShellMeter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <ShellMeter.Properties.Settings>
+            <setting name="maxX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="maxY" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="focus" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="distance" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="matrixW" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="matrixH" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="cameraURL" serializeAs="String">
+                <value />
+            </setting>
+        </ShellMeter.Properties.Settings>
+    </userSettings>
 </configuration>
