--- a/ShellMeter/ShellMeter.csproj
+++ b/ShellMeter/ShellMeter.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Interfaces\ISettingView.cs" />
     <Compile Include="BL\Status.cs" />
     <Compile Include="Presenters\ResultPresenter.cs" />
+    <Compile Include="Utility\Alerts.cs" />
     <Compile Include="Views\ResultView.xaml.cs">
       <DependentUpon>ResultView.xaml</DependentUpon>
     </Compile>
