edit settings window

--- a/ShellMeter/ShellMeter.csproj
+++ b/ShellMeter/ShellMeter.csproj
@@ -63,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BL\Settings.cs" />
     <Compile Include="Interfaces\IMainWindow.cs" />
     <Compile Include="Interfaces\IResultView.cs" />
     <Compile Include="Interfaces\ISettingView.cs" />
